Resources/k8s_config/k8s_deployment/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: decalnguyen/backend:1.0
        ports:
        - containerPort: 1337
        resources:
          requests:
            cpu: "200m"    # 500 milliCPU (half a CPU core)
            memory: "200Mi"  # 256 MiB of memory
          limits:
            cpu: "300m"   # 1000 milliCPU (one CPU core)
            memory: "1000Mi"  # 512 MiB of memory
