Resources/k8s_config/k8s_deployment/cadvisor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: cadvisor
  name: cadvisor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cadvisor
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/distributed: "true"
        io.kompose.service: cadvisor
    spec:
      containers:
      - image: gcr.io/cadvisor/cadvisor:latest
        imagePullPolicy: ""
        name: cadvisor
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /rootfs
          name: cadvisor-claim0
          readOnly: true
        - mountPath: /var/run
          name: cadvisor-claim1
        - mountPath: /sys
          name: cadvisor-claim2
          readOnly: true
        - mountPath: /var/lib/docker
          name: cadvisor-claim3
          readOnly: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: cadvisor-claim0
        persistentVolumeClaim:
          claimName: cadvisor-claim0
          readOnly: true
      - name: cadvisor-claim1
        persistentVolumeClaim:
          claimName: cadvisor-claim1
      - name: cadvisor-claim2
        persistentVolumeClaim:
          claimName: cadvisor-claim2
          readOnly: true
      - name: cadvisor-claim3
        persistentVolumeClaim:
          claimName: cadvisor-claim3
          readOnly: true
status: {}
