Resources/k8s_config/k8s_deployment/pushgateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pushgateway
  name: pushgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pushgateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/distributed: "true"
        io.kompose.service: pushgateway
    spec:
      containers:
      - image: prom/pushgateway
        imagePullPolicy: ""
        name: pushgateway
        ports:
        - containerPort: 9091
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
