Resources/k8s_config/k8s_deployment/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  labels:
    app: db 
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template: 
    metadata:
      labels: 
        app: db
    spec:
      containers: 
      - image: mysql:latest 
        name: db
        ports:
          - containerPort: 3306
        resources:
          requests: 
            cpu: "200m"
            memory: "200Mi"
          limits:
            cpu: "300m"
            memory: "300Mi"
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-data
      restartPolicy: Always
      volumes:
        - name: mysql-data 
          persistentVolumeClaim:
            claimName: mysql-data
---
apiVersion: v1 
kind: Service 
metadata:
  name: db-service
spec: 
  selector:
    app: db
  ports: 
    - protocol: TCP 
      port: 3306
      targetPort: 3306
