Resources/k8s_config/k8s_deployment/fe-lb.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: myapp-external-service
spec:
  selector: 
    app: frontend
  type: LoadBalancer
  ports: 
    - protocol: TCP
      port: 8080 
      targetPort: 8080
      nodePort: 33333
