Resources/k8s_config/k8s_deployment/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: loadbalancer
        ports:
        - containerPort: 80
        resources: 
          requests:
            cpu: "200m"    # 500 milliCPU (half a CPU core)
            memory: "200Mi"  # 256 MiB of memory
          limits:
            cpu: "300m"   # 1000 milliCPU (one CPU core)
            memory: "300Mi"  # 512 MiB of memory
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
    name: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP 
      port: 80
      targetPort: 80
